{evaluation, server/debug}: integrate evaluation for debug server (#711)
